@@ -7,7 +7,7 @@
 
 
 
-                  WikiTeX 1.3.2.1  LICENSE
+                  WikiTeX 1.3.2.2  LICENSE
 
       Peter Danenberg <danenberg at mitdasein dot com>
 
@@ -61,6 +61,6 @@ sion.
 
 
 
-                      6 September 2004
+                      7 September 2004
 
 
