@@ -7,7 +7,7 @@
 
 
 
-                   WikiTeX 1.3.2.1 README
+                   WikiTeX 1.3.2.2 README
 
       Peter Danenberg <danenberg at mitdasein dot com>
 
@@ -20,7 +20,7 @@
 
 
 
-6 September 2004
+7 September 2004
 
 
 
@@ -73,7 +73,7 @@
 
 
 
-                   WikiTeX 1.3.2.1 README
+                   WikiTeX 1.3.2.2 README
 
       Peter Danenberg <danenberg at mitdasein dot com>
 
@@ -127,7 +127,7 @@ Copyright  . . . . . . . . . . . . . . . . . . . . . . .   4
 
 
 
-                      6 September 2004
+                      7 September 2004
 
 
 
@@ -193,7 +193,7 @@ Copyright  . . . . . . . . . . . . . . . . . . . . . . .   4
 
 
 
-                      6 September 2004
+                      7 September 2004
 
 
 
@@ -259,7 +259,7 @@ Copyright  . . . . . . . . . . . . . . . . . . . . . . .   4
 
 
 
-                      6 September 2004
+                      7 September 2004
 
 
 
@@ -325,6 +325,6 @@ sion.
 
 
 
-                      6 September 2004
+                      7 September 2004
 
 
