@@ -7,7 +7,7 @@
 
 
 
-                    WikiTeX 1.3.2.1 NEWS
+                    WikiTeX 1.3.2.2 NEWS
 
       Peter Danenberg <danenberg at mitdasein dot com>
 
@@ -61,7 +61,7 @@ gramming (faqs.org/docs/artu).
 
 
 
-                      6 September 2004
+                      7 September 2004
 
 
 
@@ -127,6 +127,6 @@ sion.
 
 
 
-                      6 September 2004
+                      7 September 2004
 
 
